@@ -2,7 +2,7 @@
 # AgentTicketZoom.dtl - provides HTML for AgentTicketZoom.pm
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.dtl,v 1.199 2011/11/23 22:08:34 mb Exp $
+# $Id: AgentTicketZoom.dtl,v 1.200 2011/11/29 07:23:01 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -467,6 +467,9 @@ $Data{"ArticleItems"}
             <h2>#$QData{"Count"} &ndash; $QData{"Subject","60"}</h2>
             <div class="AdditionalInformation SpacingLoader">
                 $Text{"Created"}: $TimeShort{"$Data{"Created"}"}
+<!-- dtl:block:ArticleCreatedBy -->
+                $Text{"by"} $QData{"CreatedByUser"}
+<!-- dtl:block:ArticleCreatedBy -->
             </div>
         </div>
         <div class="LightRow Bottom">
